<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_SOS"
        android:layout_width="216dp"
        android:layout_height="103dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="98dp"
        android:text="@string/SOS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_map" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="231dp"
        android:layout_height="54dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="90dp"
        android:text="@string/Main_Text"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_map"
        android:layout_width="216dp"
        android:layout_height="103dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="96dp"
        android:text="@string/Map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>