<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_FastSOS"
        android:layout_width="216dp"
        android:layout_height="103dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="98dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:text="@string/SendEmergencySOS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/btn_RemoveSOS"
        android:layout_width="216dp"
        android:layout_height="103dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="212dp"
        android:layout_marginEnd="98dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/StopEmergencySOS"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="231dp"
        android:layout_height="54dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="111dp"
        android:layout_marginEnd="90dp"
        android:text="@string/SOS_text"
        android:textAlignment="center"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>